--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -133,6 +133,9 @@ INSTALLED_APPS = (
     # Uncomment the next line to enable admin documentation:
     # 'django.contrib.admindocs',
     'stratum0'
+
+    # migration system
+    'south'
 )
 
 SESSION_SERIALIZER = 'django.contrib.sessions.serializers.JSONSerializer'
