--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -13,12 +13,12 @@ ADMINS = (
 )
 
 MANAGERS = ADMINS
-BASE_DIR = '/root/cvmfs/web'
+BASE_DIR = '/opt/django-cvmfs-monitor'
 
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.sqlite3', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
-        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),                      # Or path to database file if using sqlite3.
+        'ENGINE': 'django.db.backends.sqlite3',        # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
+        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),  # Or path to database file if using sqlite3.
         # The following settings are not used with sqlite3:
         'USER': '',
         'PASSWORD': '',
