Integrate the monitor with the browser

--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -141,8 +141,8 @@ INSTALLED_APPS = (
     # 'django.contrib.admindocs',
     'stratum0',
 
-    # migration system
-    'south'
+    # necessary for the browser
+    #'cloud_browser',
 )
 
 SESSION_SERIALIZER = 'django.contrib.sessions.serializers.JSONSerializer'
@@ -175,3 +175,20 @@ LOGGING = {
         },
     }
 }
+
+# browser-related parameters
+
+MONITOR_SHOW_BROWSER_URL = False
+
+# CLOUD_BROWSER_DEFAULT_LIST_LIMIT = 20
+# CLOUD_BROWSER_DATASTORE = "CVMFilesystem"
+# CLOUD_BROWSER_CVMFS_CACHE = os.path.join(BASE_DIR, '/tmp/cvmfs_cache')  # change this accordingly
+# CLOUD_BROWSER_CVMFS_FQRN_WHITELIST = []  # all allowed
+
+# CLOUD_BROWSER_CVMFS_URL_MAPPING = {
+#     '.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/',
+#     '.desy.de': 'http://cvmfs-stratum-one.cern.ch/cvmfs/',
+#     '.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/',
+#     '.amc.nl': 'http://cvmfs01.nikhef.nl/cvmfs/',
+#     '.opensciencegrid.org': 'http://cvmfs.racf.bnl.gov/cvmfs/',
+# }
