--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -176,7 +176,10 @@ LOGGING = {
     }
 }
 
+############################
 # browser-related parameters
+############################
+
 
 MONITOR_SHOW_BROWSER_URL = False
 
@@ -186,8 +189,8 @@ MONITOR_SHOW_BROWSER_URL = False
 # If using the cvmfs-browser uncomment this line
 # CLOUD_BROWSER_DATASTORE = 'CVMFilesystem'
 
-# change this accordingly and DO NOT FORGET TO CREATE THE DIRECTORY BEFORE
-# please also note this cache will contain the uncompressed files that are
+# change this accordingly and DO NOT FORGET TO CREATE THE DIRECTORY BEFORE.
+# Please also note this cache will contain the uncompressed files that are
 # downloaded upon user request and so far it won't be deleted (unless
 # manually, of course).
 # CLOUD_BROWSER_CVMFS_CACHE = os.path.join(BASE_DIR, '/tmp/cvmfs_cache')
