--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -186,14 +186,11 @@ MONITOR_SHOW_BROWSER_URL = False
 # Number of tags that will be visualized per page
 # CLOUD_BROWSER_DEFAULT_LIST_LIMIT = 20
 
-# If using the cvmfs-browser uncomment this line
-# CLOUD_BROWSER_DATASTORE = 'CVMFilesystem'
-
 # change this accordingly and DO NOT FORGET TO CREATE THE DIRECTORY BEFORE.
 # Please also note this cache will contain the uncompressed files that are
 # downloaded upon user request and so far it won't be deleted (unless
 # manually, of course).
-# CLOUD_BROWSER_CVMFS_CACHE = os.path.join(BASE_DIR, '/tmp/cvmfs_cache')
+# CLOUD_BROWSER_CVMFS_CACHE = os.path.join(BASE_DIR, 'cvmfs_cache')
 
 # set the mapping of FQRN -> stratum1 URL
 # For example, atlas.cern.ch would be mapped to
