--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -14,6 +14,7 @@ ADMINS = (
 
 MANAGERS = ADMINS
 BASE_DIR = os.path.dirname(os.path.abspath(__file__))
+PROJECT_PATH = os.path.abspath(os.path.dirname(__name__))
 
 DATABASES = {
     'default': {
@@ -74,7 +75,7 @@ MEDIA_URL = ''
 # Don't put anything in this directory yourself; store your static files
 # in apps' "static/" subdirectories and in STATICFILES_DIRS.
 # Example: "/var/www/example.com/static/"
-STATIC_ROOT = 'cvmfs_web/static/'
+STATIC_ROOT = os.path.join(BASE_DIR, 'static')
 
 # URL prefix for static files.
 # Example: "http://example.com/static/", "http://static.example.com/"
