Last fixes to dockerize the application

--- a/django.conf
+++ b/django.conf
@@ -1,7 +1,7 @@
 # example template for Apache 2.4
 ServerName cvmfs-monitor:80
 
-LoadModule wsgi_module modueles/mod_wsgi.so
+LoadModule wsgi_module modules/mod_wsgi.so
 
 WSGIScriptAlias / /opt/django-cvmfs-monitor/django.wsgi
 Alias /static /opt/django-cvmfs-monitor/cvmfs_web/static
@@ -18,3 +18,4 @@ Alias /favicon.ico /opt/cdjango-vmfs-monitor/cvmfs_web/images/favicon.ico
   Options None
   Require all granted
 </Directory>
+
