--- a/django.conf
+++ b/django.conf
@@ -3,11 +3,13 @@ ServerName cvmfs-monitor:80
 
 LoadModule wsgi_module modules/mod_wsgi.so
 
+WSGIPythonPath   /usr/lib/python2.7/site-packages/
 WSGIScriptAlias / /opt/django-cvmfs-monitor/django.wsgi
-Alias /static /opt/django-cvmfs-monitor/cvmfs_web/static
-Alias /favicon.ico /opt/cdjango-vmfs-monitor/cvmfs_web/images/favicon.ico
 
-<Directory /opt/django-cvmfs-monitor/cvmfs_web/static>
+Alias /static /var/www/html/
+Alias /favicon.ico /var/www/html/images/favicon.ico
+
+<Directory /var/www/html>
   AllowOverride None
   Options None
   Require all granted
