--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -75,7 +75,7 @@ MEDIA_URL = ''
 # Don't put anything in this directory yourself; store your static files
 # in apps' "static/" subdirectories and in STATICFILES_DIRS.
 # Example: "/var/www/example.com/static/"
-STATIC_ROOT = os.path.join(BASE_DIR, 'static')
+STATIC_ROOT = '/var/www/html/'
 
 # URL prefix for static files.
 # Example: "http://example.com/static/", "http://static.example.com/"
@@ -86,7 +86,7 @@ STATICFILES_DIRS = (
     # Put strings here, like "/home/html/static" or "C:/www/django/static".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-
+    os.path.join(BASE_DIR, 'static'),
 )
 
 # List of finder classes that know how to find static files in
@@ -191,7 +191,7 @@ CLOUD_BROWSER_DEFAULT_LIST_LIMIT = 20
 # Please also note this cache will contain the uncompressed files that are
 # downloaded upon user request and so far it won't be deleted (unless
 # manually, of course).
-CLOUD_BROWSER_CVMFS_CACHE = PROJECT_PATH + '/cvmfs_cache'
+CLOUD_BROWSER_CVMFS_CACHE = '/var/www/html'
 if not os.path.isdir(CLOUD_BROWSER_CVMFS_CACHE):
     os.mkdir(CLOUD_BROWSER_CVMFS_CACHE, 0755)
 
