Use new URL mapping in settings.py.example

--- a/cvmfs_web/settings.py.example
+++ b/cvmfs_web/settings.py.example
@@ -200,9 +200,65 @@ CLOUD_BROWSER_CVMFS_CACHE = '/var/lib/cvmfs'
 # For example, atlas.cern.ch would be mapped to
 # http://cvmfs-stratum-one.cern.ch/opt/atlas because it ends in '.cern.ch'
 CLOUD_BROWSER_CVMFS_URL_MAPPING = {
-    '.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/',
-    '.desy.de': 'http://cvmfs-stratum-one.cern.ch/cvmfs/',
-    '.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/',
-    '.amc.nl': 'http://cvmfs01.nikhef.nl/cvmfs/',
-    '.opensciencegrid.org': 'http://cvmfs.racf.bnl.gov/cvmfs/',
+    'atlas.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/atlas',
+    'lhcb.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/lhcb',
+    'alice.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/alice',
+    'geant4.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/geant4',
+    'mice.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/mice.egi.eu',
+    'na62.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/na62.egi.eu',
+    'wenmr.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/wenmr.egi.eu',
+    'phys-ibergrid.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/phys-ibergrid.egi.eu',
+    'ams.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/ams',
+    'belle.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/belle',
+    'boss.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/boss',
+    'grid.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/grid',
+    'na61.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/na61',
+    'sft.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/sft',
+    'atlas-condb.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/atlas-condb',
+    'atlas-nightlies.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/atlas-nightlies',
+    'ilc.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/ilc.desy.de',
+    'bbp.epfl.ch': 'http://cvmfs-stratum-one.cern.ch/opt/bbp',
+    'cernvm-prod.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/cernvm-prod',
+    'biomed.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/biomed',
+    't2k.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/t2k.egi.eu',
+    'alice-ocdb.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/alice-ocdb',
+    'calice.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/calice.desy.de',
+    'hermes.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/hermes.desy.de',
+    'hone.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/hone.desy.de',
+    'olympus.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/olympus.desy.de',
+    'xfel.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/xfel.desy.de',
+    'zeus.desy.de': 'http://grid-cvmfs-one.desy.de:8000/cvmfs/zeus.desy.de',
+    'vlemed.amc.nl': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/vlemed.amc.nl',
+    'aleph.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/aleph',
+    'cvmfs-config.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/cvmfs-config',
+    'cernatschool.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/cernatschool.egi.eu',
+    'glast.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/glast.egi.eu',
+    'hyperk.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/hyperk.egi.eu',
+    'snoplus.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/snoplus.egi.eu',
+    'pheno.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/pheno.egi.eu',
+    'lhcbdev.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/lhcbdev',
+    'oasis.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/oasis.opensciencegrid.org',
+    'icecube.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/icecube.opensciencegrid.org',
+    'fcc.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/fcc',
+    'auger.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/auger.egi.eu',
+    'km3net.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/km3net.egi.eu',
+    'ganga.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/ganga',
+    'darkside.opensciencegrid.org': '/http://grid-cvmfs-one.desy.de:8000/cvmfs/darkside.opensciencegrid.org',
+    'des.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/des.opensciencegrid.org',
+    'fermilab.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/fermilab.opensciencegrid.org',
+    'gm2.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/gm2.opensciencegrid.org',
+    'lariat.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/lariat.opensciencegrid.org',
+    'lsst.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/lsst.opensciencegrid.org',
+    'minos.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/minos.opensciencegrid.org',
+    'mu2e.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/mu2e.opensciencegrid.org',
+    'nova.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/nova.opensciencegrid.org',
+    'seaquest.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/seaquest.opensciencegrid.org',
+    'usatlast3.opensciencegrid.org': 'http://cvmfs.fnal.gov/cvmfs/usatlast3.opensciencegrid.org',
+    'moedal.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/',
+    'cms-ib.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/',
+    'opal.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/opal',
+    'test.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/test',
+    'na49.cern.ch': 'http://cvmfs-stratum-one.cern.ch/opt/na49',
+    'pravda.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/pravda.egi.eu',
+    'ghost.egi.eu': 'http://cvmfs-egi.gridpp.rl.ac.uk:8000/cvmfs/ghost.egi.eu',
 }
